# Smelt

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  smelt.py
.claude/: settings.local.json
docs/: Architecture.md  Coding_standards.md  Plan.md
memory/: ARCHITECTURE.md  DECISIONS.md
src/smelt/: __init__.py  cli.py  config.py  context.py  exceptions.py  git.py
src/smelt/agents/: __init__.py  aider.py  base.py  goose_adapter.py  llm_client.py  plan_parser.py  protocols.py
src/smelt/db/: __init__.py  models.py  schema.py  store.py
src/smelt/pipeline/: __init__.py  architect.py  coder.py  context.py  qa.py  runner.py  sanity.py  stages.py
src/smelt/roadmap/: base.py  sqlite.py
tests/: conftest.py  test_aider.py  test_architect.py  test_cli.py  test_coder.py  test_config.py  test_context.py  test_exceptions.py  test_git.py  test_goose_adapter.py  test_llm_client.py  test_models.py  test_plan_parser.py  test_protocols.py  test_qa.py  test_roadmap_sqlite.py  test_runner.py  test_sanity.py  test_schema.py  test_stages.py  test_store.py
