[project]
name = "SmeltWorkflow"
dynamic = ["version"]
description = "AI-powered development workflow automation"
readme = "README.md"
authors = [
    { name = "Mo Radwan", email = "muhammed.a.radwan@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "pydantic-settings>=2.0"]

[project.scripts]
smelt = "smelt.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "ruff", "mypy", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/smelt"]

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
plugins = ["pytest"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]