[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smelt-cli"
version = "0.1.0"
description = "CLI tool that orchestrates AI coding agents to execute development tasks autonomously."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Mohamed Radwan" }]
keywords = ["cli", "ai", "coding-agent", "orchestrator", "automation", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "litellm>=1.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

[project.urls]
Homepage = "https://github.com/Mrdwan/Smelt"
Repository = "https://github.com/Mrdwan/Smelt"
Issues = "https://github.com/Mrdwan/Smelt/issues"
Documentation = "https://github.com/Mrdwan/Smelt#readme"

[project.scripts]
smelt = "smelt.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/smelt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.coverage.run]
source = ["smelt"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.6",
]
